conformance/tests/httproute-hostname-precedence.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hostname-precedence-without-specific
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hostname-precedence
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hostname-precedence-with-specific
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  hostnames:
  - "test.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hostname-precedence
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
          - name: test
            value: "true"
    backendRefs:
    - name: infra-backend-v1
      port: 8080
